<resources>
    <string name="app_name">Intent_Dina</string>
    <string name="move_activity">PINDAH ACTIVITY</string>
    <string name="move_with_data">PINDAH ACTIVITY DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH ACTIVITY UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI ACTIVITY</string>
    <string name="choose_hobby">PILIH HOBI</string>
    <string name="drawing">MENGGAMBAR</string>
    <string name="cooking">MEMASAK</string>
    <string name="farming">BERKEBUN</string>
    <string name="the_other">Lainnya</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_is_move_activity">INI PINDAH ACTIVITY</string>
    <string name="back">KEMBALI</string>
    <string name="this_is_back">INI KEMBALI</string>
</resources>